RESOLVED FIXED81963
WebProcess can get stuck in GC during many low memory signals
https://bugs.webkit.org/show_bug.cgi?id=81963
Summary WebProcess can get stuck in GC during many low memory signals
Stephanie Lewis
Reported 2012-03-22 14:10:09 PDT
We have seen evidence of a computer getting stuck in GC during a low memory signal. The GC was paging in more memory to run and so it was unable to finish before the next low memory signal fired. We think with the new style of GC we will not get any value to forcing GC during a low memory signal so we should remove the call. <rdar://problem/11094830> WebProcess appears to get stuck in its GC handler
Attachments
patch (2.59 KB, patch)
2012-03-23 17:07 PDT, Stephanie Lewis
ggaren: review+
Stephanie Lewis
Comment 1 2012-03-23 17:07:25 PDT
Geoffrey Garen
Comment 2 2012-03-23 17:10:09 PDT
Comment on attachment 133588 [details] patch r=me
Eric Seidel (no email)
Comment 3 2012-03-27 12:36:36 PDT
Attachment 133588 [details] was posted by a committer and has review+, assigning to Stephanie Lewis for commit.
Stephanie Lewis
Comment 4 2012-03-27 13:29:58 PDT
Note You need to log in before you can comment on or make changes to this bug.