https://bugs.webkit.org/show_bug.cgi?id=81963 WebProcess can get stuck in GC during many low memory signals. <rdar://problem/11094830> WebProcess appears to get stuck in its GC handler (81963). Remove the call to garbage collect  in low memory signal handler.  Did some testing with hitting the low memory handler during Membuster and we would get back at most 100k - 200k.  That isn't enough to help the system, and in that state the GC collection can take a substantial amount of time.

Reviewed by Geoff Garen.

Performance Change, no change in behavior.

* platform/mac/MemoryPressureHandlerMac.mm:
(WebCore::MemoryPressureHandler::releaseMemory):

Canonical link: https://commits.webkit.org/99432@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111977 268f45cc-cd09-0410-ab3c-d52691b4dbfc